--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nestjs/apollo": "^10.1.7",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^10.1.7",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "apollo-server-express": "^3.11.1",
     "axios": "^1.0.0",
+    "graphql": "^16.6.0",
+    "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
-    "tslib": "^2.3.0"
+    "sqlite3": "^5.1.4",
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.11"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
