--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,10 +14,7 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {
-      "@bidirectional-modules/cars": ["libs/cars/src/index.ts"],
-      "@bidirectional-modules/users": ["libs/users/src/index.ts"]
-    }
+    "paths": {}
   },
   "exclude": ["node_modules", "tmp"]
 }
